# GP-MOBO

./: .pre-commit-config.yaml  README.md  ehvi_mc.py  ehvi_mc_3_trials.py  ei.py  ei_3_trials.py  pyproject.toml
.github/workflows/: ci.yml
gp_mobo/: optimiser.py  score_modifiers.py
gp_mobo/acquisition_funcs/: expected_improvement.py  hypervolume.py  plot.py
gp_mobo/kern_gp/: gp_model.py
research/: ehvi_mc.py  ehvi_mc_3_trials.py  ei.py  ei_3_trials.py  example_mobo.ipynb
research/tdc_oracles_modified/: __init__.py  metadata.py  oracles.py
research/tdc_oracles_modified/chem_utils/: __init__.py
research/tdc_oracles_modified/chem_utils/oracle/: oracle.py
research/tdc_oracles_modified/utils/: load.py  misc.py
research/utils/: utils_final.py
tests/: test_optimiser.py
tests/acquisition_funcs/: test_cases.py  test_expected_improvement.py  test_hypervolume.py
utils/: utils_final.py
