[tool.poetry]
name = "gp-mobo"
version = "0.0.1"

description = "Multi-objective Bayesian optimization with Gaussian processes"
authors = [
  "Anabel Yong <bananabelyong> Austin Tripp <austintripp> Tom Clelford <thomas.clelford@ignotalabs.ai>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "1.26.4"
rdkit = "2023.9.4"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
ruff = "^0.6.9"
mypy = "^1.11.2"
pytest = "^8.3.3"
ipykernel = "^6.29.5"

[tool.poetry.group.research.dependencies]
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
networkx = "^3.3"
fuzzywuzzy = "^0.18.0"
requests = "^2.32.3"
tqdm = "^4.66.5"
dockstring = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"    # pin modern python version
warn_unused_configs = true # fail if mypy finds unused config values
[tool.ruff]
line-length = 120
# Check https://beta.ruff.rs/docs/rules/ for full list of rules
[tool.ruff.lint]
ignore = [
  # W605: invalid escape sequence -- triggered by pseudo-LaTeX in comments
  "W605",
]
